Project spacing fix

--- a/src/home/about.css
+++ b/src/home/about.css
@@ -1,6 +1,6 @@
 #about-wrapper {
-   background-color: white;
-   color: #0069d9;
+   background-color: rgba( 255, 255, 255, 0.9 );
+   color: black;
    padding: 0;
 }
 
@@ -47,7 +47,8 @@
 #about-body {
    position: relative;
    background: rgb( 0, 105, 217 );
-   background: radial-gradient( circle, rgba( 0, 105, 217, 1 ) 0%, rgba( 25, 16, 201, 1 ) 100% );
+   background: rgba( 0, 0, 0, 0.9 );
+   /* background: radial-gradient( circle, rgba( 0, 105, 217, 1 ) 0%, rgba( 25, 16, 201, 1 ) 100% ); */
    color: white;
 
    display: flex;
@@ -71,6 +72,7 @@
    height: 100%;
    text-align: left;
    font-size: 1.2em;
+   line-height: 1.6;
 
    display: flex;
    flex-direction: column;
@@ -90,7 +92,7 @@
 }
 
 #about-resume {
-   background-color: white;
+   background-color: rgba( 255, 255, 255, 0.9 );
    color: #0069d9;
    border-radius: inherit;
 
