--- a/src/home/projects.css
+++ b/src/home/projects.css
@@ -6,6 +6,7 @@
    border: none;
    background-color: transparent;
    width: 95%;
+   padding: 0;
 }
 
 #projects-content {
@@ -21,13 +22,13 @@
    max-width: 100%;
    z-index: 3;
 
-   /* Offset the margin-top of the first card and center the cards */
-   margin: -1.5em auto 0 auto;
+   /* Center the cards */
+   margin-inline: auto;
    
    display: grid;
    grid-template-columns: repeat( auto-fit, minmax( calc( 22em + 20px ), 1fr ) );
    grid-template-rows: repeat( auto-fit, 1fr );
-   gap: 1em;
+   row-gap: 2em;
    align-items: center;
    justify-content: center;
 }
@@ -45,7 +46,7 @@
    display: inline-block;
    width: 21em;
    aspect-ratio: 5 / 7;
-   margin: 2.5em auto 0 auto;
+   margin-inline: auto;
 
    transition: transform var( --transition-time, 600ms ) ease;
 }
